2009-03-02 vincentd
* change the media player by flowplayer who is under GPL V3, now all the bt can be on GPL

2009-01-21 jps
* Initial release (for developers only)