@@ -1,0 +1,88 @@
+<?xml version="1.0"?>
+<ZopeData>
+  <record id="1" aka="AAAAAAAAAAE=">
+    <pickle>
+      <tuple>
+        <global name="ZopePageTemplate" module="Products.PageTemplates.ZopePageTemplate"/>
+        <tuple/>
+      </tuple>
+    </pickle>
+    <pickle>
+      <dictionary>
+        <item>
+            <key> <string>_Cacheable__manager_id</string> </key>
+            <value> <string>web_site_user_ram_cache</string> </value>
+        </item>
+        <item>
+            <key> <string>_bind_names</string> </key>
+            <value>
+              <object>
+                <klass>
+                  <global name="NameAssignments" module="Shared.DC.Scripts.Bindings"/>
+                </klass>
+                <tuple/>
+                <state>
+                  <dictionary>
+                    <item>
+                        <key> <string>_asgns</string> </key>
+                        <value>
+                          <dictionary>
+                            <item>
+                                <key> <string>name_subpath</string> </key>
+                                <value> <string>traverse_subpath</string> </value>
+                            </item>
+                          </dictionary>
+                        </value>
+                    </item>
+                  </dictionary>
+                </state>
+              </object>
+            </value>
+        </item>
+        <item>
+            <key> <string>_text</string> </key>
+            <value> <string encoding="cdata"><![CDATA[
+
+<tal:block replace="nothing">\n
+  <!--\n
+  This widget displays the search form.\n
+  -->\n
+</tal:block>\n
+\n
+<tal:block tal:define="current_web_section python:request.get(\'current_web_section\', here);\n
+                       search_area_section_id python:current_web_section.getLayoutProperty(\'layout_search_area_section_id\', \'\')">\n
+<div class="searchform">\n
+  <fieldset>\n
+    <input name="field_your_search_text" class="field" value=""\n
+           onkeyup="submitFormOnEnter(event, this.form, \'search_area/ERP5Site_viewQuickSearchResultList\');"\n
+           tal:attributes="onkeyup string:submitFormOnEnter(event, this.form, \'${section_id}/ERP5Site_viewQuickSearchResultList\');" />\n
+    <input type="submit" class="button" value="Search" name="search_area/ERP5Site_viewQuickSearchResultList:method"\n
+           tal:attributes="name string:${section_id}/ERP5Site_viewQuickSearchResultList:method"\n
+           i18n:attributes="title" i18n:domain="ui" />\n
+  </fieldset>\n
+</div>\n
+</tal:block>\n
+
+
+]]></string> </value>
+        </item>
+        <item>
+            <key> <string>content_type</string> </key>
+            <value> <string>text/html</string> </value>
+        </item>
+        <item>
+            <key> <string>expand</string> </key>
+            <value> <int>0</int> </value>
+        </item>
+        <item>
+            <key> <string>id</string> </key>
+            <value> <string>WebSection_viewSearchBar</string> </value>
+        </item>
+        <item>
+            <key> <string>title</string> </key>
+            <value> <string></string> </value>
+        </item>
+      </dictionary>
+    </pickle>
+  </record>
+</ZopeData>
