@@ -15,6 +15,7 @@
               <list>
                 <string>default</string>
                 <string>editable</string>
+                <string>enabled</string>
                 <string>title</string>
               </list>
             </value>
@@ -68,6 +69,12 @@
                     <value> <string></string> </value>
                 </item>
                 <item>
+                    <key> <string>enabled</string> </key>
+                    <value>
+                      <persistent> <string encoding="base64">AAAAAAAAAAM=</string> </persistent>
+                    </value>
+                </item>
+                <item>
                     <key> <string>field_id</string> </key>
                     <value> <string></string> </value>
                 </item>
@@ -97,6 +104,10 @@
                 <item>
                     <key> <string>editable</string> </key>
                     <value> <int>0</int> </value>
+                </item>
+                <item>
+                    <key> <string>enabled</string> </key>
+                    <value> <int>1</int> </value>
                 </item>
                 <item>
                     <key> <string>field_id</string> </key>
@@ -132,6 +143,22 @@
         <item>
             <key> <string>_text</string> </key>
             <value> <string>here/WebSection_viewNewsWidget</string> </value>
+        </item>
+      </dictionary>
+    </pickle>
+  </record>
+  <record id="3" aka="AAAAAAAAAAM=">
+    <pickle>
+      <tuple>
+        <global name="TALESMethod" module="Products.Formulator.TALESField"/>
+        <tuple/>
+      </tuple>
+    </pickle>
+    <pickle>
+      <dictionary>
+        <item>
+            <key> <string>_text</string> </key>
+            <value> <string>python:request.get(\'current_web_section\', here).getLayoutProperty(\'layout_news_area_section_id\', \'\')</string> </value>
         </item>
       </dictionary>
     </pickle>
